
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int memcpy (char*,char*,int) ;

int default_generate_new_key (char *buff, char *key, int len, void *E) {
  memcpy (buff, key, len);
  return len;
}
